<resources>
    <string name="app_name">Watch It!</string>
    <string name="tv_intro_movies">MOVIES</string>
    <string name="tv_television_series">TV SERIES</string>
    <string name="refresh_menu">Refresh</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="intro_button">Button</string>
    <string name="intro_done">DONE</string>
    <string name="page_under_development">Page Under Development..</string>
    <string name="app_includes_libraries">This app includes the following open source libraries.</string>
    <string name="retrofit">Retrofit</string>
    <string name="os_picasso">Picasso</string>
    <string name="os_okhttp">OkHttp</string>
    <string name="license_apache_2_0">License: Apache 2.0</string>
    <string name="os_materialdrawer">MaterialDrawer</string>
    <string name="copyright_2016_mike_penz">Copyright 2016 Mike Penz</string>
    <string name="copyright_2016_airbnb_inc">Copyright 2016 Airbnb, Inc</string>
    <string name="os_lottie">Lottie</string>
    <string name="copyright_2014_dionysis_lorentzos">Copyright 2014 Dionysis Lorentzos</string>
    <string name="os_swipecards">Swipecards</string>
    <string name="copyright_2013_jake_wharton">Copyright 2013 Jake Wharton</string>
    <string name="os_butterknife">Butterknife</string>
    <string name="copyright_2013_square_inc">Copyright 2013 Square, Inc</string>
    <string name="backdrop">Backdrop</string>
    <string name="poster_image">Poster</string>
</resources>
